added css things

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <iframe src="https://cdn.pixabay.com/photo/2022/05/05/01/05/nature-7175030_960_720.jpg"></iframe>
 
 
+
     </header>
+
+    <div class="div1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, natus quia delectus provident doloremque doloribus voluptatibus voluptate, repudiandae nobis voluptas necessitatibus placeat adipisci repellat porro eius cumque iure dolor molestiae.</div>
    
     <h2>O szkole</h2>
     <h3>Testowane Work in progres</h3>
